--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="bg">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="Анализ на цени на видео карти в България - проследяваме GPU цени от OLX и предоставяме детайлна статистика и анализ на стойността" />
+    <title>GPU Market BG - Анализ на цени на видео карти</title>
   </head>
   <body>
     <div id="root"></div>
